finish multi notebook, start on chain

--- a/Notebooks/MultPeriod Notebook.ipynb
+++ b/Notebooks/MultPeriod Notebook.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "# Have we hit a dead end?\n",
     "\n",
-    "Suprisingly, no. We are actually heading in the right direction. There is an unstated assumption we got correct; using the single period bionmial option pricing method. Think of the method first and foremost as a tool. Every tool has a time and place. \"A screwdriver isn't useful as a hammer.\" Rather than retool our method, let's change where and when we use it. Before we do that though I want to draw your attention to something and then we will get back to pricing this option.\n",
+    "Suprisingly, no. We are actually heading in the right direction. There is an unstated assumption we got correct; using the single period binomial option pricing method. Think of the method first and foremost as a tool. Every tool has a time and place. \"A screwdriver isn't useful as a hammer.\" Rather than retool our method, let's change where and when we use it. Before we do that though I want to draw your attention to something and then we will get back to pricing this option.\n",
     "\n",
     "If you haven't noticed it yet then let me point it out; the tree appears to be several different options *chained* together. Let's seperate out these options. \n",
     "\n",
@@ -124,6 +124,8 @@
     "* down value is `$ 104.50`\n",
     "* and the risk-free rate for the period is `0.05`\n",
     "\n",
+    "In this single period binomial call option the up state is positive, `121 - 110 = 11,` and the down state payoff is negative (`104.50 - 110 =  -5.50`) but this is a call option so we are not obligated to exercise the option, which means the down state payoff is `0`.\n",
+    "\n",
     "Using the `CallOption()` class I wrote, we find the following:"
    ]
   },
@@ -149,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "From the terminal printout we can see that the fair price for the call option at t1 when in the up state is `$ 6.98`\n",
+    "From the terminal printout we can see that the fair price for the call option at t1 when in the up state is `$ 6.98`. In simple terms, we know that the price of the option will be `$ 6.98` in `6 months` when the underlying price increases to `$ 110`. \n",
     "\n",
     "# Pricing the 'down' option:\n",
     "\n",
@@ -188,9 +190,42 @@
     "\n",
     "Great looks like we've got this down. Now we just do the same thing to find today's price, correct?\n",
     "\n",
-    "Nope.\n",
+    "Nope!\n",
     "\n",
-    "# Pricing the option today: the twist\n"
+    "# Pricing the option today: the twist\n",
+    "At this point its common for learners to confuse what to do next. For the past 2 steps we've been calculating these *smaller* single period binomial options. So we do the same for this last one, right?... Well, let's see what we get out of it when we calculate the option following the same approach from before... ...if you haven't seen the issue yet, let me paint it to you using the following picture. \n",
+    "\n",
+    "![Big Issue](img/big_issue_example.png)\n",
+    "\n",
+    "The value of this simple call option will be zero. The underlying price will never rise to above the strike price of `$ 110`. No one would exercise this call option. Therefor, under this analysis, the value of the option is worthless. \n",
+    "\n",
+    "But at the start of this document I stated that the answer is `$ 4.43`. How do we reconcile this discrepancy. The approach we've been using generated a price of zero, whereas I've been saying the actual price for this example is `4.43`. Again we are presented with the question, \"how do we know when the answer is wrong?\" When we criticaly think through the most recent step we will see that we made a number of logical errors.\n",
+    "\n",
+    "### What we did wrong:\n",
+    "\n",
+    "We assumed that the tool used before could also work here. We saw that the past 2 steps each followed the exact same approach pattern. It's not a stretch to assume this pattern continues forward. However, consider that there is no logical reason for the persistence of this pattern. It might very well be that by chance the first 2 steps followed the same approach. (This will give rise to an important corollary later). In short, we've fallen victim to a \"monkey see, monkey do\" mindset. We are better than that. \n",
+    "\n",
+    "Remember that we found the fair price for this call option 6 months from today when the underlying asset's price rises to `$ 110` and similarly we found the fair price when the underlying asset's price falls to `$ 95`. The call option's prices are `$ 6.98` and `$ 0.00` respectively. Are we to just ignore these values? No! But our approach took one look at those calculations and went \"oh... *guess we don't need these!*\" and threw them out. But these are the payoffs of the call option if we were to sell it in 6 months! The work from earlier demonstrated that the option has some intrinsic value when the underlying price rises to `$ 110`. This value in 6 months must carry in part back to today. Else, we could pay nothing for the option today, and pocket $6.98 in 6 months! What a great deal! We would make money from nothing! This illogical situation suggests that 1). the call option today must be worth some positive value, and 2) the call option's value is somewhere between `$ 0.00` and `$ 6.98`. By this logic we must reject that the call option has zero value today!\n",
+    "\n",
+    "Let's put some numbers to it for example. Suppose we mispriced our calculation and bought the option today at exactly `$ 6.00`. There is still a chance that we can profit from this mistake if the underlying price rises to `$ 110` in 6 months which would push the fair market price of the option to `$ 6.98`. We could sell our option at that `6.98` and walk away with `$ 0.98` in profit. (which is the answer to that side question from earlier). Conversely if the underlying price instead falls to `$ 95` we are under no obligation to exercise our option, in which case our profit is zero. It's these payoff states we care about. Recall that these are a vital component in the calculating the fair price of an option.\n",
+    "\n",
+    "In the single period binomial option module the payoffs are normally calculated internally but we can override those payoff calculations by passing additional arguments. (Dev note: I'm contemplating moving this feature to its own module in the future, I've opted to bundle this functionality together for now.) The following demonstrates this and produces the answer we've been looking for. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 100, \nwith a strike price of 110, an up price of 110, a down price of 95, and a risk free rate of 5.0%.\nAll outputs are rounded to 2 decimal places.  \nUSER HAS OPTED TO OVERRIDE PAYOFF VALUES! BE AWARE THIS WILL AFFECT CALCULATIONS!\n\n--------------\nCalculations\n--------------\nCalculated Option Price: 4.43\nCalculated Hedge Ratio: 0.47\nCalculated present value of bond position: -42.1\nUp state payoff is 6.98 and down state payoff is 0\nCalculated risk neutral probability for up state is 0.67 and for down state risk neutral probability is 0.33\n_____________________________________________________________________________________________________________\n\n"
+    }
+   ],
+   "source": [
+    "todays_option = CallOption(100, 110, 110, 95, 0.05, 6.98, 0)\n",
+    "todays_option.print_calc_values()"
    ]
   },
   {
@@ -199,7 +234,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The final product:"
+    "Finally, there is the answer.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "# Chaining it all together:\n",
+    "The code below is everything above condensed to a few lines."
    ]
   },
   {
@@ -226,7 +267,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generalizing this approach."
+    "---\n",
+    "# Generalizing the approach\n",
+    "\n",
+    "There is no limit to the number of periods we can have to describe the evolution of the underlying price and thus how accurate we can be with our calculation. Just keep in mind that today's price is a reflection of the next time period's payoffs, and those payoffs are a reflection of the next time period's payoff, etc. \n",
+    "\n",
+    "Consider the following general example with 4 distinct time periods:\n",
+    "\n",
+    "![general binomial tree](img/four_period_general.png)\n",
+    "\n",
+    "Between each time period, the underlying price can move up or down by some factor, u or d, respectively. For instance, suppose in each time period the volatitily of the underlying can be described as either increasing by 10% or decreasing by 5% (like the example above). In the case of only increases for t4, the stock price has increase by 4 factors of u. Stated differently, the highest possible underlying price is "
    ]
   },
   {
