actual complete multperiod notebook

--- a/Notebooks/MultPeriod Notebook.ipynb
+++ b/Notebooks/MultPeriod Notebook.ipynb
@@ -270,13 +270,18 @@
     "---\n",
     "# Generalizing the approach\n",
     "\n",
-    "There is no limit to the number of periods we can have to describe the evolution of the underlying price and thus how accurate we can be with our calculation. Just keep in mind that today's price is a reflection of the next time period's payoffs, and those payoffs are a reflection of the next time period's payoff, etc. \n",
+    "There is no limit to the number of periods we can have to describe the evolution of the underlying price and thus how accurate we can be with our calculation. But we must keep in mind a few things:\n",
+    "* Today's price is a reflection of the next time period's payoffs, and those payoffs are a reflection of the next time period's payoff, etc. \n",
+    "* How the problem describes volatility. Is the volatility described in annual terms or in terms of periods.\n",
+    "* How the problem describes the risk-free rate. \n",
     "\n",
     "Consider the following general example with 4 distinct time periods:\n",
     "\n",
     "![general binomial tree](img/four_period_general.png)\n",
     "\n",
-    "Between each time period, the underlying price can move up or down by some factor, u or d, respectively. For instance, suppose in each time period the volatitily of the underlying can be described as either increasing by 10% or decreasing by 5% (like the example above). In the case of only increases for t4, the stock price has increase by 4 factors of u. Stated differently, the highest possible underlying price is "
+    "Between each time period, the underlying price can move up or down by some factor, u or d, respectively. For instance, suppose in each time period the volatitily of the underlying can be described as either increasing by 5% or decreasing by 5%. In the calculation, the up factor would be `u = (1 + 0.05) = 1.05` and the down factor is `d = (1 + -0.05) = 0.95`. In the case of only increases for t4, the stock price has increase by 4 factors of u. Stated differently, the highest possible underlying price is u\\*u\\*u\\*u\\*S = (u^4) \\* S.  In the case of 2 ups and 2 downs is u\\*u\\*d\\*d\\*S = (u^2) \\* (d^2) \\* S. \n",
+    "\n",
+    "### You can imagine any possible binomial tree with n-periods. \n"
    ]
   },
   {
