--- a/Notebooks/MultPeriod Notebook.ipynb
+++ b/Notebooks/MultPeriod Notebook.ipynb
@@ -308,12 +308,12 @@
     "\n",
     "Does the following equality hold?\n",
     "\n",
-    "## $stock + put = PV(strike) + call$\n",
+    "$stock + put = PV(strike) + call$\n",
     "\n",
     "Rearrange:\n",
     "\n",
     " \n",
-    "## $stock + put - PV(strike) - call = 0$\n",
+    "$stock + put - PV(strike) - call = 0$\n",
     "\n",
     "\n",
     "To check, what's the present value of the strike price on this option that expires 1 year from today?\n"
