fix spelling errors, update Readme

--- a/Notebooks/MultPeriod Notebook.ipynb
+++ b/Notebooks/MultPeriod Notebook.ipynb
@@ -35,13 +35,13 @@
     "\n",
     "## Question: What would be the fair price of European style call option that expires 1 year from now?\n",
     "\n",
-    "I'm going to things differently. The answer here is `$ 4.43`. But how did I get to this answer and how do I know that it is correct? Rather than just asking you to blindly trust me, I'll show you my thought process.\n",
+    "I'm going to do things differently. The answer here is `$ 4.43`. But how did I get to this answer and how do I know that it is correct? Rather than just asking you to blindly trust me, I'll show you my thought process.\n",
     "\n",
     "## Start with a naive assumption.\n",
     "\n",
-    "Consider answering this question using the single period binomial option pricing method? After all, we know the current stock price, the strike price, the payoffs in the up and down state, and risk free rate. Is it safe to assume that we can focus on just the beginning and the end? Like this? \n",
+    "Consider answering this question using the single period binomial option pricing method? After all, we know the current stock price, the strike price, the payoffs in the up and down state, and risk-free rate. Is it safe to assume that we can focus on just the beginning and the end? Like this? \n",
     "\n",
-    "![A niave assumption](img/naive_assumption_example.png)\n",
+    "![A naive assumption](img/naive_assumption_example.png)\n",
     "\n",
     "This seems like a promising start. Let's price it anyway using the binomial pricing code I built."
    ]
@@ -82,7 +82,7 @@
     "\n",
     "![The tree](img/tree_example.png)\n",
     "\n",
-    "If we look all the way to the right we can see that there are actually 3 payoff states, not 2. Since this assumption failed then we know that the answer must be off. We could stop here if we wanted satisfied that `$ 6.42` isn't the correct price. But let's analyze the second assumption as it will become useful in a bit.\n",
+    "If we look all the way to the right, we can see that there are actually 3 payoff states, not 2. Since this assumption failed then we know that the answer must be off. We could stop here if we wanted satisfied that `$ 6.42` isn't the correct price. But let's analyze the second assumption as it will become useful in a bit.\n",
     "\n",
     "## Is it safe to assume that the option value doesn't evolve over time?\n",
     "\n",
@@ -90,16 +90,16 @@
     "\n",
     "Conversely, what if the underlying price skyrockets well above the strike price and we go to sell our option? Is it still worth what we paid for? NO! At the very least, it should be worth the difference in the current underlying price and the strike price. This is especially true for American style call options and European call options that are close to expiration. If you sold it for anything less, then you are essentially giving free money away. \n",
     "\n",
-    "Rephrased, suppose that we messed up and actually bought a call option at `$ 6.42` on this underlying asset (seriously, I've got a bridge for sale). Does this mean that we can never profit from this transaction? Well, in actuality, our mistake doesn't rule out the possiblity of profit. Which is good news. But it doesn't guarentee that we will make a profit (or fully recover the price we paid.)\\*\n",
+    "Rephrased, suppose that we messed up and bought a call option at `$ 6.42` on this underlying asset (seriously, I've got a bridge for sale). Does this mean that we can never profit from this transaction? Well, our mistake doesn't rule out the possibility of profit. Which is good news. But it doesn't guarantee that we will make a profit (or fully recover the price we paid.)\\*\n",
     "\n",
     "\n",
     "\\* Side question. If possible, at what point will the option price be higher than `$ 6.42`?\n",
     "\n",
     "# Have we hit a dead end?\n",
     "\n",
-    "Suprisingly, no. We are actually heading in the right direction. There is an unstated assumption we got correct; using the single period binomial option pricing method. Think of the method first and foremost as a tool. Every tool has a time and place. \"A screwdriver isn't useful as a hammer.\" Rather than retool our method, let's change where and when we use it. Before we do that though I want to draw your attention to something and then we will get back to pricing this option.\n",
+    "Surprisingly, no. We are heading in the right direction. There is an unstated assumption we got correct; using the single period binomial option pricing method. Think of the method first and foremost as a tool. Every tool has a time and place. \"A screwdriver isn't useful as a hammer.\" Rather than retool our method, let's change where and when we use it. Before we do that though I want to draw your attention to something and then we will get back to pricing this option.\n",
     "\n",
-    "If you haven't noticed it yet then let me point it out; the tree appears to be several different options *chained* together. Let's seperate out these options. \n",
+    "If you haven't noticed it yet, then let me point it out; the tree appears to be several different options *chained* together. Let's separate out these options. \n",
     "\n",
     "### Let's call this the 'up' option.\n",
     "(Because in the prior period the underlying asset price went up)\n",
@@ -115,7 +115,7 @@
     "\n",
     "![The 'Starting' Option](img/start_option_example.png)\n",
     "\n",
-    "When we break out the original tree into distinct single period options, suddenly the tasks looks a lot more solvable. Let's try using the single period binomial option pricing now and see where that gets us.\n",
+    "When we break out the original tree into distinct single period options, suddenly the tasks look a lot more solvable. Let's try using the single period binomial option pricing now and see where that gets us.\n",
     "\n",
     "# Pricing the 'up' option:\n",
     "I'll save you the trouble of scrolling up and hunting for the values we need for this calculation. Here's what we have:\n",
@@ -188,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "From the terminal printout we can see that the value of the vall option in the down state is... drum roll... `0.00`. \n",
+    "From the terminal printout we can see that the value of the call option in the down state is... drum roll... `0.00`. \n",
     "\n",
     "Great looks like we've got this down. Now we just do the same thing to find today's price, correct?\n",
     "\n",
@@ -201,7 +201,7 @@
     "\n",
     "The value of this simple call option will be zero. The underlying price will never rise to above the strike price of `$ 110`. No one would exercise this call option. Therefor, under this analysis, the value of the option is worthless. \n",
     "\n",
-    "But at the start of this document I stated that the answer is `$ 4.43`. How do we reconcile this discrepancy. The approach we've been using generated a price of zero, whereas I've been saying the actual price for this example is `4.43`. Again we are presented with the question, \"how do we know when the answer is wrong?\" When we criticaly think through the most recent step we will see that we made a number of logical errors.\n",
+    "But at the start of this document I stated that the answer is `$ 4.43`. How do we reconcile this discrepancy? The approach we've been using generated a price of zero, whereas I've been saying the actual price for this example is `4.43`. Again we are presented with the question, \"how do we know when the answer is wrong?\" When we critically think through the most recent step we will see that we made a number of logical errors.\n",
     "\n",
     "### What we did wrong:\n",
     "\n",
@@ -388,20 +388,20 @@
     "\n",
     "#### NOTE 1:\n",
     "\n",
-    "I've introduced continously compounded rate of `0.05` per year. This is a significant change from the problems above which describe their risk-free rate per period. This change might seem annoying at first but working with continously compounding makes things easier, especially when dealing with smaller time periods. For an arbitrary length of time *T*, described by *n* distinct periods the following holds:\n",
+    "I've introduced continuously compounded rate of `0.05` per year. This is a significant change from the problems above which describe their risk-free rate per period. This change might seem annoying at first but working with continuously compounding makes things easier, especially when dealing with smaller time periods. For an arbitrary length of time *T*, described by *n* distinct periods the following holds:\n",
     "\n",
     "## $$e^r = (e^{r\\Delta t})^n$$\n",
     "\n",
-    "* Where *r* is the continously compounded risk-free rate \n",
+    "* Where *r* is the continuously compounded risk-free rate \n",
     "* Where $\\Delta t$ is the length of period as a fraction of a year such that $\\Delta t = \\frac{1}{\\#periods/year}$. (For example, if the underlying price can evolve over 2 periods in 1 year then $\\Delta t = \\frac{1}{2}$, if 3 periods then $\\Delta t = \\frac{1}{3}$, etc.) \n",
     "\n",
-    "Notice that make a distinction between the number of periods (which I noted as #periods) and the number of periods which describes the time until maturity, *n*. This is because its entirely possible for $n > periods/year$. Such is the case when the maturity lenght is greater than 1 year. The main point is to make sure your rates of change make sense. \n",
+    "Notice that make a distinction between the number of periods (which I noted as #periods) and the number of periods which describes the time until maturity, *n*. This is because its entirely possible for $n > periods/year$. Such is the case when the maturity length is greater than 1 year. The main point is to make sure your rates of change make sense. \n",
     "\n",
     "Lastly, the concept of  $\\Delta t$ is important as it will be used in calculating up and down factors.\n",
     "\n",
     "#### NOTE 2:\n",
     "\n",
-    "Up until now I've avoided discussing problems that involve volatility. Instead I just skipped to saying that the up and down factors were 'known'. Where did those values come from? Depends, where do you want them to come from? Well, considering these are discrete time problems, they could have come from either Jarrow-Rudd's approach or Cox-Ross-Rubinstein's approach to calculating up and down factors. We will assume that these approaches incorporate risk-neutral probabilites. (I will not be introducing other approaches). By the way, these approaches tend to become more accurate when there are many distinct periods in the multi-period model.\n",
+    "Up until now I've avoided discussing problems that involve volatility. Instead I just skipped to saying that the up and down factors were 'known'. Where did those values come from? Depends, where do you want them to come from? Well, considering these are discrete time problems, they could have come from either Jarrow-Rudd's approach or Cox-Ross-Rubinstein's approach to calculating up and down factors. We will assume that these approaches incorporate risk-neutral probabilities. (I will not be introducing other approaches). By the way, these approaches tend to become more accurate when there are many distinct periods in the multi-period model.\n",
     "\n",
     "### Jarrow-Rudd approach:\n",
     "\n",
@@ -409,7 +409,7 @@
     "# $$ upfactor = e^{r\\Delta t-\\frac{\\sigma^2}{2}\\Delta t+\\sigma\\sqrt{\\Delta t}} $$ \n",
     "# $$ downfactor = e^{r\\Delta t-\\frac{\\sigma^2}{2}\\Delta t-\\sigma\\sqrt{\\Delta t}} $$\n",
     "\n",
-    "* Where $\\sigma$ is the volatility (standard deviation) and $\\sigma^2$ is the variance of the continously compounding return.\n",
+    "* Where $\\sigma$ is the volatility (standard deviation) and $\\sigma^2$ is the variance of the continuously compounding return.\n",
     "\n",
     "### Cox-Ross-Rubinstein approach\n",
     "\n",
@@ -492,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Anyway, now that we've covered where the up and down factors come from we can return to solving the problem presented above. \n",
+    "### Anyway, now that we've covered where the up and down factors come from, we can return to solving the problem presented above. \n",
     "\n",
     "From here on we will be using the Jarrow-Rudd approach. So, our first step is listing out the prices that the underlying asset could evolve to over the next 2 periods. This can be done using some half-baked code.\n",
     "\n"
@@ -554,11 +554,11 @@
     "\n",
     "![general binomial tree](img/four_period_general.png)\n",
     "\n",
-    "Between each time period, the underlying price can move up or down by some factor, u or d, respectively. For instance, suppose in each time period the volatitily of the underlying can be described as either increasing by 5% or decreasing by 5%. In the calculation, the up factor would be `u = (1 + 0.05) = 1.05` and the down factor is `d = (1 + -0.05) = 0.95`. In the case of only increases for t4, the stock price has increase by 4 factors of u. Stated differently, the highest possible underlying price is u\\*u\\*u\\*u\\*S = (u^4) \\* S.  In the case of 2 ups and 2 downs is u\\*u\\*d\\*d\\*S = (u^2) \\* (d^2) \\* S. \n",
+    "Between each time period, the underlying price can move up or down by some factor, u or d, respectively. For instance, suppose in each time period the volatility of the underlying can be described as either increasing by 5% or decreasing by 5%. In the calculation, the up factor would be `u = (1 + 0.05) = 1.05` and the down factor is `d = (1 + -0.05) = 0.95`. In the case of only increases for t4, the stock price has increase by 4 factors of u. Stated differently, the highest possible underlying price is u\\*u\\*u\\*u\\*S = (u^4) \\* S.  In the case of 2 ups and 2 downs is u\\*u\\*d\\*d\\*S = (u^2) \\* (d^2) \\* S. \n",
     "\n",
     "### You can imagine any possible binomial tree with n-periods. \n",
     "\n",
-    "But you may have noticed that it is rather troublesome to program out every binomial node. Surely there is a short cut?"
+    "But you may have noticed that it is rather troublesome to program out every binomial node. Surely there is a short cut? There is, which I will discuss soon."
    ]
   },
   {
