start on blackscholes and nodes

--- a/Notebooks/MultPeriod Notebook.ipynb
+++ b/Notebooks/MultPeriod Notebook.ipynb
@@ -93,7 +93,7 @@
     "Rephrased, suppose that we messed up and bought a call option at `$ 6.42` on this underlying asset (seriously, I've got a bridge for sale). Does this mean that we can never profit from this transaction? Well, our mistake doesn't rule out the possibility of profit. Which is good news. But it doesn't guarantee that we will make a profit (or fully recover the price we paid.)\\*\n",
     "\n",
     "\n",
-    "\\* Side question. If possible, at what point will the option price be higher than `$ 6.42`?\n",
+    "\\* Side question. If possible, at what point will the option price be higher than `$ 6.42`? This question will be answered later\n",
     "\n",
     "# Have we hit a dead end?\n",
     "\n",
